[tool.poetry]
name = "upwork-37040369"
version = "0.1.0"
description = ""
authors = ["Dmitrii.Mashkov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.14.3"
pydeck = "^0.8.0"
googlemaps = "^4.10.0"
pyiceberg = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
